# pyrola

./: .gitignore  README.md  agents.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
.pyrola/: mcp.json
docs/: CURSOR-TOOLS-SURVEY.md  STATUS.md  index.md
docs/.vitepress/: config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: chat.rs  config.rs  fs.rs  git.rs  glob.rs  grep.rs  http.rs  keychain.rs  lsp.rs  mcp.rs  mod.rs  paths.rs  registry.rs  shell.rs  watch.rs  workspace.rs
src/composables/: use-add-project.ts  use-agent-harness.ts  use-appearance.ts  use-chat-prompt-bridge.ts  use-chat-skills.ts  use-chat-store.ts  use-command-palette.ts  use-context-usage.ts  use-file-tree-clipboard.ts  use-file-tree-node-menu.ts  use-fleet-registry.ts  use-fleet-sidebar.ts  use-git-branches.ts  use-mcp-servers.ts  use-projects-expansion.ts  use-projects-section.ts  use-provider-models-catalog.ts  use-pyrola-config.ts  use-pyrola-live-sync.ts  use-start-plan-build.ts  use-studio-renderer.ts  use-vibrancy.ts  use-workbench-store.ts
src/constants/: chat-modes.ts
src/data/: ai-sdk-provider-catalog.ts  mock-fleet-projects.ts  model-role-registry.ts
src/router/: index.ts
src/schemas/: chat-message-line.ts  chat-meta.ts  context-mention.ts  file-diff.ts  lsp-config.ts  mcp-config.ts  plan-document.ts  projects-registry.ts  (+3 more)
(+352 files in other folders)
